--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -349,7 +349,7 @@
     </svg>
 
   </div>
-
+  <app-search-bar></app-search-bar>
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
