--- a/frontend/src/app/search-bar/search-bar.component.html
+++ b/frontend/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,4 @@
 <div class="search-bar">
-    <input type="text" placeholder="Search...">
-    <button type="button">Search</button>
+    <input type="text" placeholder="Search..." [(ngModel)]="searchTerm">
+    <button type="button" (click)="sendSearchTerm()">Search</button>
   </div>
-  
